added changes in the lab

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # \"ART VANDELAY\""
+    "\"art vandelay.upper()\" # \"ART VANDELAY\""
    ]
   },
   {
@@ -143,7 +143,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\".upper() # 'ART VANDELAY'"
+    "\"art vandelay\" # 'ART VANDELAY'"
    ]
   },
   {
@@ -168,7 +168,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'"
+     "'art vandelay'.title()"
    ]
   },
   {
@@ -186,7 +186,7 @@
    },
    "outputs": [],
    "source": [
-    "\"Ceo\" # 'CEO'"
+     "'Ceo'.upper()"
    ]
   },
   {
@@ -204,7 +204,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+     "'art.vandelay@vandelay.co'.endswith('.com')"
    ]
   },
   {
@@ -223,7 +223,7 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+     "'www.' + 'vandelay.com'"
    ]
   },
   {
@@ -248,7 +248,7 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 7285553335"
+    "int("7285553334") + 1"
    ]
   },
   {
